syntax = "proto2";

package stremio.core.types;

option java_package = "com.stremio.core.types.profile";

message Profile {
  optional Auth auth = 1;
  // repeated Descriptor addons = 2;
  required Settings settings = 3;

  message Settings {
    required string interface_language = 1;
    required string streaming_server_url = 2;
    required bool binge_watching = 3;
    required bool play_in_background = 4;
    required bool hardware_decoding = 6;
    required bool audio_passthrough = 7;
    required string audio_language = 8;
    required string subtitles_language = 9;
    required int32 subtitles_size = 10;
    required string subtitles_font = 11;
    required bool subtitles_bold = 12;
    required int32 subtitles_offset = 13;
    required string subtitles_text_color = 14;
    required string subtitles_background_color = 15;
    required string subtitles_outline_color = 16;
    required int64 seek_time_duration = 17;
    optional string secondary_audio_language = 18;
    optional string secondary_subtitles_language = 19;
    optional string player_type = 20;
    required bool auto_frame_rate_matching = 21;
    required int32 next_video_notification_duration = 22;
  }
}

message Auth{
  required string key = 1;
  required User user = 2;
}

message User{
  required string id = 1;
  required string email = 2;
  optional string fb_id = 3;
  optional string avatar = 4;
  required GDPRConsent gdpr_consent = 5;
}

message GDPRConsent {
  required bool tos = 1;
  required bool privacy = 2;
  required bool marketing = 3;
  optional string from = 4;
}