syntax = "proto2";

package stremio.core.models;

option java_package = "com.stremio.core.models";

import "stremio/core/types/library.proto";

message LibraryWithFilters {
  optional Selected selected = 1;
  required Selectable selectable = 2;
  repeated stremio.core.types.LibraryItem catalog = 3;

  message Selected {
    required LibraryRequest request = 1;
  }
  message LibraryRequest {
    optional string type = 1;
    required Sort sort = 2;
    required int64 page = 3;
  }
  enum Sort {
    LastWatched = 0;
    Name = 1;
    NameReverse = 2;
    TimesWatched = 3;
    Watched = 4;
    NotWatched = 5;
  }
  message Selectable {
    repeated SelectableType types = 1;
    repeated SelectableSort sorts = 2;
    optional SelectablePage next_page = 3;
  }
  message SelectableType {
    optional string type = 1;
    required bool selected = 2;
    required LibraryRequest request = 3;
  }
  message SelectableSort {
    required Sort sort = 1;
    required bool selected = 2;
    required LibraryRequest request = 3;
  }
  message SelectablePage {
    required LibraryRequest request = 1;
  }
}

